--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,5 +22,6 @@
   {% endwith %}
   {% block content %}{% endblock %}
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
