--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container mt-4">
-  <h2>SKU Alias Mapping</h2>
+<h2>SKU Alias Mapping</h2>
   <ul class="nav nav-tabs" id="mapTabs" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="map-tab" data-bs-toggle="tab" data-bs-target="#map" type="button" role="tab">Mapping</button>
@@ -14,7 +13,8 @@
     <div class="tab-pane fade show active" id="map" role="tabpanel">
       <input type="text" id="searchBox" class="form-control mb-3" placeholder="Search SKUs">
       <form method="POST">
-        <table id="skuTable" class="table table-bordered">
+        <div class="table-responsive">
+        <table id="skuTable" class="table table-bordered align-middle">
           <thead>
             <tr>
               <th>Merge</th>
@@ -63,6 +63,7 @@
             </tr>
           </tbody>
         </table>
+        </div>
         <button class="btn btn-secondary me-2" type="submit" name="merge" value="1">Merge Selected</button>
         <button class="btn btn-primary" type="submit" name="save" value="1">Save Changes</button>
       </form>
@@ -91,7 +92,6 @@
       <p>No suggestions available.</p>
       {% endif %}
   </div>
-</div>
 </div>
 <script>
   document.getElementById('searchBox').addEventListener('input', function() {
